@@ -5,7 +5,6 @@ import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParseException;
 import com.google.gson.JsonParser;
-import com.google.gson.annotations.SerializedName;
 import com.nimbusds.jose.shaded.gson.Gson;
 import edu.cnm.deepdive.crossfyre.model.entity.Puzzle;
 import edu.cnm.deepdive.crossfyre.model.entity.Puzzle.Board;
@@ -42,13 +41,6 @@ public class PuzzleService implements AbstractPuzzleService {
   private final OkHttpClient client = new OkHttpClient();
   private final Gson gson = new Gson();
 
-  @JsonProperty("shortdef")
-  private List<String> shortDefs;
-
-  @JsonProperty("cxl")
-  private List<String> crossRefs;
-
-
 
   @Autowired
   PuzzleService(PuzzleRepository puzzleRepository, PuzzleWordRepository puzzleWordRepository,
@@ -63,9 +55,10 @@ public class PuzzleService implements AbstractPuzzleService {
   // We need to get a new instance of the Puzzle object.
   // We need to get the size of the puzzle, assign the correct board layout for the puzzle day,
   //assign the correct date to the puzzle, and get the List<PuzzleWords> for that puzzle.
-  @Profile("cronjob")
-  @Scheduled(cron = "0 44 3 * * *") // Runs every day at midnight
+  @Scheduled(cron = "0 11 15 * * *") // Runs every day at midnight
   public void createPuzzle() {
+
+    System.out.println("Entering createPuzzle:");
 
     // Create date for today and get value of the currentDay
     LocalDate today = LocalDate.now();
@@ -77,7 +70,7 @@ public class PuzzleService implements AbstractPuzzleService {
     Board[] boards = Board.values();
 //    Board todaysBoard = boards[boardIndex];
     Board todaysBoard = Board.TUESDAY;
-    int boardSize = (int) Math.round(Math.sqrt(todaysBoard.toString().length()));
+    int boardSize = (int) Math.round(Math.sqrt(todaysBoard.day.length()));
 
     Instant date = today.atStartOfDay(ZoneOffset.UTC).toInstant();
 
@@ -104,8 +97,9 @@ public class PuzzleService implements AbstractPuzzleService {
       Map<String, String> definitions = new HashMap<>();
       fetchDefinitions(puzzleWords, definitions);
       for (PuzzleWord puzzleWord : puzzleWords) {
-        if ((definitions.get(puzzleWord.getWordName()).equals("(No short definition or cross reference found)")
-        || (definitions.get(puzzleWord.getWordName()).equals("(No valid entry found)")))) {
+        if (definitions.get(puzzleWord.getWordName()).equals("(No short definition or cross reference found)")
+            || definitions.get(puzzleWord.getWordName()).equals("(No valid entry found)")
+            || definitions.get(puzzleWord.getWordName()).equals("(Failed to fetch)")) {
           valid = false;
           break;
         }
@@ -113,27 +107,19 @@ public class PuzzleService implements AbstractPuzzleService {
       if (valid) {
         for (PuzzleWord word : puzzleWords) {
           word.setPuzzle(puzzle);
-          // String clue = definitions.get(word.getWordName())
-          // if(definitions.get(word.getWordName()).length() > 254) {
-          // clue = clue.substring(0,254);
-          // }
-          // word.setClue(clue);
-          word.setClue(definitions.get(word.getWordName()));
+          String clue = definitions.get(word.getWordName());   // TODO: 8/1/25 Do we want to truncate this or throw out puzzle/ swap in new shortdefs?
+          if (clue.length() > 254) {
+            clue = clue.substring(0, 254);
+          }
+          word.setClue(clue);
           puzzle.getPuzzleWords().add(word);
         }
+        //puzzleWordRepository.saveAll(puzzleWords);
+//      puzzle.getPuzzleWords().addAll(puzzleWords); // need to pass in a Collection, not an Iterable
         puzzleRepository.save(puzzle);
       }
     } while (!valid);
 
-//    for (PuzzleWord word : puzzleWords) {
-//      word.setPuzzle(puzzle);
-//      word.setClue(definitions.get(word.getWordName()));
-//      puzzle.getPuzzleWords().add(word);
-//    }
-//
-//    //puzzleWordRepository.saveAll(puzzleWords);
-////    puzzle.getPuzzleWords().addAll(puzzleWords); // need to pass in a Collection, not an Iterable
-//    puzzleRepository.save(puzzle);
   }
 
 
@@ -157,14 +143,18 @@ public class PuzzleService implements AbstractPuzzleService {
             JsonArray array = JsonParser.parseString(json).getAsJsonArray();
 
             if (!array.isEmpty() && array.get(0).isJsonObject()) {
+              JsonObject entry = array.get(0).getAsJsonObject();
+
+              JsonArray shortDefs = entry.getAsJsonArray("shortdef"); //
+              JsonArray crossRefs = entry.getAsJsonArray("cxl");
 
               String definition;
               if (shortDefs != null && !shortDefs.isEmpty()) {
-                definition = shortDefs.getFirst();
+                definition = shortDefs.get(0).getAsString();
                 definitions.put(pw.getWordName(), definition);
               } else {
                 if (crossRefs != null && !crossRefs.isEmpty()) {
-                  definition = crossRefs.getFirst();
+                  definition = crossRefs.get(0).getAsString();
                   definitions.put(pw.getWordName(), definition);
                 }
                 else {
@@ -184,7 +174,6 @@ public class PuzzleService implements AbstractPuzzleService {
     }
 
   }
-
 //  @Override
 //  public Puzzle getOrAddPuzzle(Puzzle puzzle) {
 //    return puzzleRepository
